--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
-MONGODB=mongodb://localhost:27017/nest-pokemon
+MONGODB=mongodb://localhost:27017/pokemondb
 PORT=3100
 DEFAULT_LIMIT=5
+
+SECRET_KEY=""
+JWT_SEED=""
